# deeplocalizer-classifier

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  wercker.yml
deeplocalizer/classifier/: CMakeLists.txt  CaffeClassifier.h  DataReader.h
deeplocalizer/classifier/src/: CaffeClassifier.cpp  DataReader.cpp  caffe_stats.cpp
include/deeplocalizer/: DataReader.h  DataWriter.h  Dataset.h  Image.h  ManuallyTagger.h  ManuallyTaggerWindow.h  PipelineWorker.h  ProposalGenerator.h  Tag.h  TagWidget.h  TrainData.h  TrainDatum.h  TrainsetGenerator.h  WholeImageWidget.h  utils.h
include/deeplocalizer/classifier/: CaffeClassifier.h
include/deeplocalizer/tagger/: DataWriter.h  Dataset.h  Tag.h  TagWidget.h  TrainDatum.h  TrainsetGenerator.h  WholeImageWidget.h  qt_helper.h  serialization.h
models/conv10_conv16_conv48_fc_512_fc256_fc2/: deploy.prototxt  solver.prototxt  train_val.prototxt
models/conv10_conv32_conv64_fc_1024_fc256_fc2/: deploy.prototxt  solver.prototxt  train_val.prototxt
models/conv16_conv32_conv64_fc1024_fc512_fc2/: deploy.prototxt  solver.prototxt  train_val.prototxt
models/conv16_conv64_fc1024_fc_2/: solver.prototxt  train_val.prototxt
models/conv16_conv64_fc1024_fc_2_gray/: solver.prototxt  train_val.prototxt
models/conv32_conv128_fc2048_fc_1024_fc2/: deploy.prototxt  solver.prototxt  train_val.prototxt
models/conv8_conv16_conv48_fc_2048_fc1024_fc2/: deploy.prototxt  solver.prototxt  train_val.prototxt
models/conv8_conv16_fc256_fc2/: deploy.prototxt  solver.prototxt  train_val.prototxt
models/conv8_conv32_conv64_fc1024_fc512_fc2/: deploy.prototxt  solver.prototxt  train_val.prototxt
scripts/: find_all_images.sh  pick_n.sh  plot_roc.py  setup_aws.sh  test.sh
source/: CMakeLists.txt  CaffeClassifier.h  DataReader.cpp  DataWriter.cpp  Dataset.cpp  Image.cpp  Image.h  ImageTagWidget.cpp  ImageTagWidget.h  ManuallyTagger.cpp  ManuallyTagger.h  ManuallyTaggerWindow.cpp  ManuallyTaggerWindow.h  ManuallyTaggerWindow.ui  ManuellyLocalizer.cpp  ManuellyLocalizer.h  ManuellyTagger.cpp  ManuellyTagger.h  PipelineWorker.cpp  PipelineWorker.h  ProposalGenerator.cpp  ProposalGenerator.h  QtHelper.h  Tag.cpp  Tag.h  TagWidget.cpp  TagWidget.h  TrainData.cpp  TrainDatum.cpp  TrainsetGenerator.cpp  WholeImageWidget.cpp  WholeImageWidget.h  add_border.cpp  caffe_stats.cpp  deeplocalizer.cpp  deeplocalizer.h  generate_dataset.cpp  generate_proposals.cpp  main.cpp  manuelltagwindow.cpp  (+6 more)
source/classifier/: CMakeLists.txt  CaffeClassifier.cpp  caffe_stats.cpp
source/tagger/: CMakeLists.txt  DataWriter.cpp  ManuallyTagger.cpp  ManuallyTaggerWindow.cpp  ManuallyTaggerWindow.ui  Tag.cpp  TrainDatum.cpp  add_border.cpp  generate_dataset.cpp
test/: CMakeLists.txt  TestDataReaderWriter.cpp  TestImage.cpp  TestImageTagWidget.cpp  TestManuallyTagger.cpp  TestManuellyLocalizer.cpp  TestManuellyTagger.cpp  TestProposalGenerator.cpp  TestSerialization.cpp  TestTrainsetGenerator.cpp
test/scripts/: CMakeLists.txt  test_add_border.sh  test_generate_proposals.sh
test/testdata/: CMakeLists.txt
